examples/datalog/14_aggregations/72_avg_simple.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_avg
Knowledge graph 'test_avg' created.
Switched to knowledge graph: test_avg
> .kg use test_avg
Switched to knowledge graph: test_avg
> +grades[(1, 80), (2, 90), (3, 70), (4, 85), (5, 95)].
Inserted 5 fact(s) into 'grades'.
> +avg_grade(<AVG:Grade>) :- grades(_, Grade).
Script error: Parse error: Invalid term: '<AVG:Grade>'
